--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,36 @@
+body {
+  width: 960px;
+  margin: auto;
+  background-color: lightskyblue;
+}
+
+section {
+  border: 10px solid orange;
+  margin: 30px auto;
+  background-color: greenyellow;
+}
+
 img {
-  width: 300px;
+  display: inline-block;
+  margin: 50px 0px 50px 46px;
+  width: 240px;
+  border: 5px solid black;
 }
 
 h1 {
   font-size: 20px;
   margin: 15px;
+  text-align: center;
+}
+
+p {
+  width: 75%;
+  text-align: center;
+  line-height: 25px;
+  margin: 20px auto;
+}
+
+canvas {
+  border: 1px dotted black;
+  margin: 15px auto;
 }
