--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,21 @@
 body {
   width: 960px;
   margin: auto;
-  background-color: lightskyblue;
+  background-color: bisque;
 }
 
 section {
-  border: 10px solid orange;
+  border: 10px solid sienna;
+  border-radius: 50px;
   margin: 30px auto;
-  background-color: greenyellow;
+  background-color: burlywood;
 }
 
 img {
   display: inline-block;
-  margin: 50px 0px 50px 46px;
+  margin: 10px 0px 10px 46px;
   width: 240px;
+  height: 200px;
   border: 5px solid black;
 }
 
@@ -33,4 +35,24 @@ p {
 
 canvas {
   margin: 15px auto;
+}
+
+/* TABLE CSS */
+table {
+  border: 5px solid blue;
+  text-align: center;
+  margin: auto;
+}
+
+td {
+  padding: .2em;
+  border: 1px solid black;
+  border-radius: 15px;
+}
+
+th {
+  padding: .2em;
+  background-color: darkblue;
+  color: white;
+  width: 100px;
 }
