--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ h1 {
 p {
   width: 75%;
   text-align: center;
+  font-size: 18px;
   line-height: 25px;
   margin: 20px auto;
 }
@@ -40,7 +41,7 @@ canvas {
 table {
   border: 5px solid blue;
   text-align: center;
-  margin: auto;
+  margin: 20px auto;
 }
 
 td {
